--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         {
             "name": "Saleh",
             "email": "Saleh7@protonmail.ch"
+        },
+        {
+            "name": "njeremic",
+            "email": "nemanja@joker.rs"
         }
     ],
     "require": {
